--- a/app/views/manage/questionnaire/v11/confirmation.html
+++ b/app/views/manage/questionnaire/v11/confirmation.html
@@ -3,6 +3,15 @@
 {% set title = 'Questionnaire submitted' %}
 {% set back = false %}
 
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
+{% endblock %}
+
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
