--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set nav = false %}
+{% set nav = true %}
 {% set title = 'Local appeals' %}
 
 {% block backLink %}
