--- a/app/views/manage/final-comments/v1/add-comments.html
+++ b/app/views/manage/final-comments/v1/add-comments.html
@@ -1,73 +1,154 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set back = false %}
+{% set back = true %}
 {% set title = 'Add final comments' %}
 
-{% block questions %}
-  <h1 class="govuk-heading-l">
-    {{ title }}
-  </h1>
-
-  <p>Your final comments should only respond to the statements from the appellant or interested parties, and must not include any new evidence.</p>
-
-  <p>If you want to add documents to support your comments, for example photographs, you can upload them in the next step.</p>
-
-  <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-    Sensitive information
-  </h2>
-
-  <p>You must not include any sensitive information in your comments.</p>
-
-  {% set sensitiveHTML %}
-    <p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
-    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
-      <li>comments from children</li>
-      <li>information relating to children</li>
-      <li>information relating to health</li>
-      <li>information relating to crime</li>
-      <li>
-        any information relating to an individual&rsquo;s:
-        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
-          <li>race</li>
-          <li>ethnic origin</li>
-          <li>politics</li>
-          <li>religion</li>
-          <li>trade union membership</li>
-          <li>genetics</li>
-          <li>physical characteristics</li>
-          <li>sex life</li>
-          <li>sexual orientation</li>
-        </ul>
-      </li>
-    </ul>
-  {% endset -%}
-
-  {{ govukDetails({
-    summaryHtml: 'What is sensitive information?',
-    html: sensitiveHTML
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
-
-  {{ govukTextarea({
-    name: 'final-comments',
-    id: 'final-comments',
-    value: data['final-comments'],
-    rows: '8',
-    label: {
-      html: 'What are your final comments?',
-      classes: 'govuk-label--m'
-    }
+  {{ govukBackLink({
+    html: 'Back to your planning appeals',
+    href: 'manage/#manage'
   }) }}
+{% endblock %}
 
-  {{ govukCheckboxes({
-    idPrefix: 'appeal-statement-confirmation',
-    name: 'appeal-statement-confirmation',
-    classes: 'checkboxes-long-text',
-    items: [
-      {
-        html: 'I confirm that I have not included any sensitive information in my final comments.',
-        value: 'I confirm that I have not included any sensitive information in my final comments.',
-        checked: checked('appeal-statement-confirmation','I confirm that I have not included any sensitive information in my final comments.')
-      }
-    ]
-  }) }}
+{% block content %}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+
+      <h1 class="govuk-heading-l">
+        {{ title }}
+      </h1>
+
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+      {# Tweak the summary list to be smaller #}
+
+      <style>
+        .appeal-details .govuk-summary-list__key,
+        .appeal-details .govuk-summary-list__value,
+        .appeal-details .govuk-summary-list__actions {
+          padding-top: 0;
+          padding-bottom: 0;
+        }
+        /* Give some space for the tag being inline now */
+        .app-task-list__section {
+          padding-right: 140px
+        }
+      </style>
+
+      {{ govukSummaryList({
+        classes: 'appeal-details govuk-summary-list--no-border govuk-!-margin-bottom-0',
+        rows: [
+          {
+            key: {
+              text: 'Appeal reference'
+            },
+            value: {
+              text: 'APP/Q9999/D/21/1345264'
+            }
+          },
+          {
+            key: {
+              text: 'Planning application number'
+            },
+            value: {
+              text: '21/05058/FUL'
+            }
+          },
+          {
+            key: {
+              text: 'Deadline'
+            },
+            value: {
+              text: '6' | daysInFuture
+            }
+          }
+        ]
+      }) }}
+
+      <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+
+      <form method="post" action="">
+
+        <p>Your final comments should only respond to the statements from the appellant or interested parties, and must not include any new evidence.</p>
+
+        <p>If you want to add documents to support your comments, for example photographs, you can upload them in the next step.</p>
+
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          Sensitive information
+        </h2>
+
+        <p>You must not include any sensitive information in your comments.</p>
+
+        {% set sensitiveHTML %}
+          <p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
+          <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+            <li>comments from children</li>
+            <li>information relating to children</li>
+            <li>information relating to health</li>
+            <li>information relating to crime</li>
+            <li>
+              any information relating to an individual&rsquo;s:
+              <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+                <li>race</li>
+                <li>ethnic origin</li>
+                <li>politics</li>
+                <li>religion</li>
+                <li>trade union membership</li>
+                <li>genetics</li>
+                <li>physical characteristics</li>
+                <li>sex life</li>
+                <li>sexual orientation</li>
+              </ul>
+            </li>
+          </ul>
+        {% endset -%}
+
+        {{ govukDetails({
+          summaryHtml: 'What is sensitive information?',
+          html: sensitiveHTML
+        }) }}
+
+        {{ govukTextarea({
+          name: 'final-comments',
+          id: 'final-comments',
+          value: data['final-comments'],
+          rows: '8',
+          label: {
+            html: 'What are your final comments?',
+            classes: 'govuk-label--m'
+          }
+        }) }}
+
+        {{ govukCheckboxes({
+          idPrefix: 'appeal-statement-confirmation',
+          name: 'appeal-statement-confirmation',
+          classes: 'checkboxes-long-text',
+          items: [
+            {
+              html: 'I confirm that I have not included any sensitive information in my final comments.',
+              value: 'I confirm that I have not included any sensitive information in my final comments.',
+              checked: checked('appeal-statement-confirmation','I confirm that I have not included any sensitive information in my final comments.')
+            }
+          ]
+        }) }}
+
+        {{ govukButton({
+          html: 'Continue'
+        }) }}
+
+      </form>
+
+    </div>
+  </div>
+
 {% endblock %}
