--- a/app/views/manage/final-comments/v1/documents-check.html
+++ b/app/views/manage/final-comments/v1/documents-check.html
@@ -2,6 +2,21 @@
 
 {% set title = 'Do you have additional documents to support your final comments?' %}
 
+{% set nav = true %}
+
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
+  {{ govukBackLink({
+    html: 'Back',
+    href: 'javascript:history.back()'
+  }) }}
+{% endblock %}
+
 {% block questions %}
   {{ govukRadios({
     idPrefix: 'adding-documents',
