--- a/app/views/manage/statement/v1/check-your-answers.html
+++ b/app/views/manage/statement/v1/check-your-answers.html
@@ -2,8 +2,16 @@
 
 {% set title = "Do you have additional documents to support your appeal statement?" %}
 
-{% set nav = false %}
-{% block backLink %}
+{% set serviceName = "Manage appeals" %}
+{% set nav = true %}
+
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
   {{ govukBackLink({
     html: 'Back',
     href: 'javascript:history.back()'
@@ -12,7 +20,7 @@
 
 {% block questions %}
   <h1 class="govuk-heading-l">
-    Check your answers and submit your final comments
+    Check your answers and submit your appeal statement
   </h1>
 
   {{ govukSummaryList({
