--- a/app/views/manage/statement/v1/confirmation.html
+++ b/app/views/manage/statement/v1/confirmation.html
@@ -1,31 +1,47 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Do you have additional documents to support your appeal statement?" %}
+{% set title = "Appeal statement submitted" %}
 
-{% set nav = false %}
-{% set back = false %}
+{% set serviceName = "Manage appeals" %}
+{% set nav = true %}
 
-{% block questions %}
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
+{% endblock %}
 
-    {{ govukPanel({
-      titleHtml: 'Appeal statement submitted'
-    }) }}
+{% block content %}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-    <p>We&rsquo;ve sent you a confirmation email.
-    </p>
+      {{ govukPanel({
+        titleHtml: title
+      }) }}
 
-    <h2 class="govuk-heading-m">
-      What happens next
-    </h2>
+      <p>
+        We&rsquo;ve sent you a confirmation email.
+      </p>
 
-    <p>We&rsquo;ll check you&rsquo;ve submitted everything we need to progress your appeal. We&rsquo;ll contact you once we&rsquo;ve done this.</p>
+      <h2 class="govuk-heading-m">
+        What happens next
+      </h2>
 
-    <p class="govuk-!-margin-bottom-5">
-      <a href="/manage/appeals/v2/">Back to appeals</a>
-    </p>
+      <p>
+        We&rsquo;ll check you&rsquo;ve submitted everything we need to progress your appeal. We&rsquo;ll contact you once we&rsquo;ve done this.
+      </p>
 
-    <p>
-      <a href="#0">What did you think of this service?</a> (takes 30 seconds)
-    </p>
+      <p class="govuk-!-margin-bottom-5">
+        <a href="/manage/appeals/v2/">Back to appeals</a>
+      </p>
 
+      <p>
+        <a href="#0">What did you think of this service?</a> (takes 30 seconds)
+      </p>
+
+    </div>
+  </div>
 {% endblock %}
