--- a/app/views/manage/statement/v1/documents-check.html
+++ b/app/views/manage/statement/v1/documents-check.html
@@ -2,8 +2,16 @@
 
 {% set title = "Do you have additional documents to support your appeal statement?" %}
 
-{% set nav = false %}
-{% block backLink %}
+{% set serviceName = "Manage appeals" %}
+{% set nav = true %}
+
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
   {{ govukBackLink({
     html: 'Back',
     href: 'javascript:history.back()'
