LPA account updates - emails all linked up now

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,11 +60,26 @@
       </h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Emails
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="/manage/emails/v1/service-invite">Service invite</a>
+        </li>
+        <li>
+          <a href="/manage/emails/v1/appeal-valid">Appeal started</a>
+        </li>
+        <li>
+          <a href="/manage/emails/v1/appeal-statements">Appeal statements (cross-copy)</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
         Common journeys and patterns
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/appeals/">Local authority appeals</a>
+          <a href="manage/appeals/?questionnaire=&statement=&finalcomments=">Local authority appeals</a>
         </li>
         <li>
           <a href="manage/manage-users/">Manage users</a>
