--- a/app/views/manage/final-comments/v1/confirmation.html
+++ b/app/views/manage/final-comments/v1/confirmation.html
@@ -27,10 +27,10 @@
         What happens next
       </h2>
 
-      <p>We&rsquo;ll check you've submitted everything we need to progress the appeal and will contact you if anything is missing.</p>
+      <p>We’ll check you’ve submitted everything we need to progress the appeal and will contact you if anything is missing.</p>
 
       <p>
-        <a href="../../appeals/v2/?finalcomments=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="/manage/appeals/v2/?no-appeals=false&finalcomments=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
       </p>
 
     </div>
