--- a/app/views/manage/manage-users/v2/add-user.html
+++ b/app/views/manage/manage-users/v2/add-user.html
@@ -2,6 +2,19 @@
 
 {% set title = 'What is their email address?' %}
 
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
+  {{ govukBackLink({
+    html: 'Back',
+    href: 'javascript:history.back()'
+  }) }}
+{% endblock %}
+
 {% block questions %}
   {{ govukInput({
     id: 'add-user-email',
