--- a/app/views/manage/statement/v1/_layout.html
+++ b/app/views/manage/statement/v1/_layout.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% set bodyClasses = bodyClasses | default("internal") %}
-{% set serviceName = '<span class="dept">Planning Inspectorate</span> Manage Appeals' | safe %}
+{% set serviceName = '<span class="dept">Planning Inspectorate</span> Manage your planning inspectorate appeals' | safe %}
 {% block pageTitle %}
-  Manage Appeals — Planning Inspectorate
+  Manage your planning inspectorate appeals — Planning Inspectorate
 {% endblock %}
 
 {% block content %}
