--- a/app/views/manage/statement/v1/confirmation.html
+++ b/app/views/manage/statement/v1/confirmation.html
@@ -2,7 +2,7 @@
 
 {% set title = "Appeal statement submitted" %}
 
-{% set serviceName = "Manage appeals" %}
+{% set serviceName = "Manage your planning inspectorate appeals" %}
 {% set nav = true %}
 
 {% block beforeContent %}
@@ -35,11 +35,7 @@
       </p>
 
       <p class="govuk-!-margin-bottom-5">
-        <a href="/manage/appeals/v2/">Back to appeals</a>
-      </p>
-
-      <p>
-        <a href="#0">What did you think of this service?</a> (takes 30 seconds)
+        <a href="/manage/appeals/v2/?statement=complete">Back to appeals</a>
       </p>
 
     </div>
