--- a/app/views/manage/final-comments/v1/add-comments.html
+++ b/app/views/manage/final-comments/v1/add-comments.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
       {# Tweak the summary list to be smaller #}
 
@@ -74,6 +74,12 @@
           }
         ]
       }) }}
+
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
