--- a/app/views/manage/manage-users/v2/remove-user.html
+++ b/app/views/manage/manage-users/v2/remove-user.html
@@ -2,6 +2,19 @@
 
 {% set title = 'Confirm you want to remove this user' %}
 
+{% block beforeContent %}
+  {{ govukPhaseBanner({
+    tag: {
+      text: "Beta"
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
+  {{ govukBackLink({
+    html: 'Back',
+    href: 'javascript:history.back()'
+  }) }}
+{% endblock %}
+
 {% block questions %}
   <h1 class="govuk-heading-l">
     {{ title }}
