--- a/app/views/manage/questionnaire/v11/confirmation.html
+++ b/app/views/manage/questionnaire/v11/confirmation.html
@@ -33,7 +33,7 @@
       <p>We&rsquo;ll review your evidence and will be in touch if we need any further information.</p>
 
       <p>
-        <a href="../../appeals/v2/?questionnaire=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="../../appeals/v2/??no-appeals=false&questionnaire=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
       </p>
 
     </div>
