--- a/app/views/manage/statement/v1/documents-upload.html
+++ b/app/views/manage/statement/v1/documents-upload.html
@@ -2,7 +2,7 @@
 
 {% set title = "Do you have additional documents to support your appeal statement?" %}
 
-{% set serviceName = "Manage appeals" %}
+{% set serviceName = "Manage your planning inspectorate appeals" %}
 {% set nav = true %}
 
 {% block beforeContent %}
