LPA service start page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,6 +63,10 @@
         Emails
       </h3>
       <ul class="govuk-list govuk-list--bullet">
+
+        <li>
+          <a href="/manage/emails/">Emails summary</a>
+        </li>
         <li>
           <a href="/manage/emails/v1/service-invite">Service invite</a>
         </li>
@@ -79,7 +83,10 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/appeals/?questionnaire=&statement=&finalcomments=">Local authority appeals</a>
+          <a href="manage/access/">Service start page</a>
+        </li>
+        <li>
+          <a href="manage/appeals/?questionnaire=&statement=&finalcomments=">Planning appeals (list of appeals)</a>
         </li>
         <li>
           <a href="manage/manage-users/">Manage users</a>
