--- a/app/views/manage/emails/v1/appeal-statements.html
+++ b/app/views/manage/emails/v1/appeal-statements.html
@@ -53,12 +53,12 @@
       What you can do
     </h2>
 
-    <p class="govuk-body">
+    {# <p class="govuk-body">
       You can complete your questionnaire online in our new ‘Manage your planning inspectorate appeals’ service.
-    </p>
+    </p> #}
 
     <p class="govuk-body">
-      To complete your questionnaire, you need to click the link to receive a secure code. We’ll send you a code to sign into your account with. You can then view, edit, share and submit the questionnaire online.
+      To add your statement, you need to click the link to receive a secure code. We’ll send you a code to sign into your account with.
     </p>
 
 
@@ -74,7 +74,7 @@
     <ol class="govuk-list govuk-list--number">
       <li>
         Go to the link to receive a code:<br>
-        <a href="/manage/access/v1/enter-code?start=statements" class="govuk-link">https://manage-appeals.planninginspectorate.gov.uk/appeal/04125/final-comments?/lpa=1vW7td12</a>
+        <a href="/manage/access/v1/enter-code?start=statements" class="govuk-link">https://manage-appeals.planninginspectorate.gov.uk/appeal/04125/statement?/lpa=1vW7td12</a>
       </li>
       <li>
         Enter the code we send in an email to you.
