Added a link to the archive app

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -142,6 +142,22 @@
       ]
     }) }}
 
+  </div>
+
+
+
+  <div class="govuk-grid-column-two-thirds">
+
+    <h2 class="govuk-heading-m">
+      Prototype archive
+    </h2>
+
+    <p>Previous prototypes from the beta are on a different railway app.</p>
+
+    <p>Some of the version numbers on here will not start at 1, that means the work was started on the old prototype and you can see the previous versions there.</p>
+
+    <p><a href="https://appeals-archive.up.railway.app/">View the archive</a> (username: tim, password: password)</p>
+
 
   </div>
 </div>
