Prep save and return and update some tags

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
           <a href="appeal/before-you-start/">Before you start</a>
         </li>
         <li>
-          Save and return
+          <a href="appeal/save-and-return/">Save and return</a>
         </li>
         <li>
           GOV.UK guidance
