Added save and return up to code entry and updated the email templates for the prototype

--- a/app/views/appeal/save-and-return/index.html
+++ b/app/views/appeal/save-and-return/index.html
@@ -34,11 +34,11 @@
 
     <p><a href="https://miro.com/app/board/uXjVPD6q8IM=/?share_link_id=504329325803">Review of what is in live on Miro</a>.</p>
 
-    {# {{ govukButton({
+    {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/',
+      href: 'v'+version+'/govuk-start',
       isStartButton: true
-    }) }} #}
+    }) }}
 
   </div>
 </div>
