--- a/app/views/_layouts/layout-email.html
+++ b/app/views/_layouts/layout-email.html
@@ -1,58 +1,27 @@
-{% block head %}
-  <!--[if lte IE 8]><link href="/public/stylesheets/unbranded-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
-  <!--[if gt IE 8]><!--><link href="/public/stylesheets/unbranded.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
+{% extends "govuk-prototype-kit/layouts/unbranded.html" %}
+
+{% block bodyEnd %}
+	<style>
+		.govuk-width-container {
+			max-width: 560px
+		}
+		a {
+			word-wrap: break-word
+		}
+	</style>
 {% endblock %}
 
-{% set mainClasses = mainClasses | default("govuk-main-wrapper--auto-spacing") %}
-
-{% block header %}{% endblock %}
-{% extends '_layouts/layout-includes.html' %}
-
-
-{# Add the title(h1) to page title if it's set, add to each page with:
-{% set title = 'Example' %} #}
-{% block pageTitle %}
-	{{ title+' –' if title }} {{ serviceName }}
-{% endblock %}
-
-{# Add the phase banner and back link to each page #}
-{% block beforeContent %}
-{% endblock %}
-
-{# Setup form question pages by default, override by using content block if not needed #}
 {% block content %}
-	<div class="govuk-grid-row">
-		<div class="govuk-grid-column-two-thirds">
+	{% block emailHeader %}{% endblock %}
 
-			{# Forms all post to themselves, action controlled by _routes.js in each prototype #}
-			<form method="post">
+	<hr class="govuk-section-break govuk-section-break--visible govuk-section-break--xl">
 
-				{# Use the questions block on each page without needing to add in the rest of this block #}
-				{% block questions %}{% endblock %}
+	{% block emailContent %}{% endblock %}
 
-				{# Set default button to continue, use buttons block to override #}
-				{% block buttons %}
-					{{ govukButton({
-						text: 'Continue'
-					}) }}
-
-					{# Option to add a return to task list link
-					Add on pages that with:
-						{% set return = true %}
-
-					or add for whole prototype in routes.js with:
-						res.locals['return'] = true
-					#}
-					{% if return == true %}
-						<p><a href="../task-list" class="govuk-link--no-visited-state">Return to task list</a></p>
-					{% endif %}
-				{% endblock %}
-
-			</form>
-
-		</div>
-	</div>
-{% endblock %}
-
-{% block footer %}
+	<p>Thank you,</p>
+	<p>
+		The Planning Inspectorate
+		<br>
+		<a href="#0">enquiries@planninginspectorate.gov.uk</a>
+	</p>
 {% endblock %}
