--- a/app/views/_layouts/layout-pins.html
+++ b/app/views/_layouts/layout-pins.html
@@ -1,5 +1,8 @@
 {% extends '_layouts/layout-main.html' %}
 
+{# Add a body class to override things if needed #}
+{% set bodyClasses = 'internal' %}
+
 {% block header %}
 	{# Change the header for PINS apps, eg LPA product #}
 
