Changes from review with CD

--- a/app/views/_layouts/layout-email.html
+++ b/app/views/_layouts/layout-email.html
@@ -1,5 +1,7 @@
 {% extends "govuk-prototype-kit/layouts/unbranded.html" %}
 
+{% from 'govuk/components/inset-text/macro.njk'          import govukInsetText %}
+
 {% block bodyEnd %}
 	<style>
 		.govuk-width-container {
