--- a/app/views/appeal/save-and-return/index.html
+++ b/app/views/appeal/save-and-return/index.html
@@ -40,6 +40,11 @@
       isStartButton: true
     }) }}
 
+    <ul class="govuk-list govuk-list--bullet">
+      <li><a href="v{{version}}/email--saved">Email: Your appeal has been saved</a></li>
+      <li><a href="v{{version}}/email--code">Email: Your security code</a></li>
+    </ul>
+
   </div>
 </div>
 {% endblock %}
