--- a/app/views/appeal/save-and-return/v5/confirm-email.html
+++ b/app/views/appeal/save-and-return/v5/confirm-email.html
@@ -9,7 +9,7 @@
 
   <p>You need to provide an email address to appeal a planning decision using this service.</p>
 
-  <p>This is so we can save your progress and you can return to your appeal later. We&rsquo;ll also use this to contact you about your appeal.</p>
+  <p>This is so we can save your progress and you can return to your appeal later. We&rsquo;ll also use this email address to contact you about your appeal.</p>
 
   {{ govukInput({
     id: 'email',
