--- a/app/views/appeal/save-and-return/v5/enter-code.html
+++ b/app/views/appeal/save-and-return/v5/enter-code.html
@@ -1,4 +1,5 @@
 {% extends '_layouts/layout-main.html' %}
+{% set prototypeLinks = [{href: 'email--code', text: 'Email: Your security code'}] %}
 
 {% set title = 'Check your email' %}
 
@@ -8,7 +9,7 @@
   </h1>
 
   {{ govukInsetText({
-    html: 'We have sent an email with a code to '+(data['email'] or 'example@email.com')
+    html: 'We&rsquo;ve sent a code to '+(data['email'] or 'example@email.com')
   }) }}
 
   <p>The email might take a few minutes to arrive. The code will expire after 30 minutes.</p>
@@ -19,7 +20,7 @@
     value: data['code'],
     classes: 'govuk-input--width-5',
     label: {
-      html: 'What is the 5 digit code?',
+      html: 'Enter the 5 digit security code',
       classes: 'govuk-label--m'
     }
   }) }}
