--- a/app/views/appeal/save-and-return/v5/return-check.html
+++ b/app/views/appeal/save-and-return/v5/return-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'What do you want to do?' %}
+{% set title = 'Do you want to start a new appeal or return to a saved appeal?' %}
 
 {% block questions %}
   {{ govukRadios({
