--- a/app/views/appeal/save-and-return/v5/your-appeals.html
+++ b/app/views/appeal/save-and-return/v5/your-appeals.html
@@ -25,21 +25,19 @@
       </style>
       {{ govukTable({
         classes: 'govuk-!-margin-top-3',
-        caption: 'Unsubmitted appeals',
+        caption: 'New appeals',
         captionClasses: 'govuk-table__caption--m govuk-!-padding-top-6 app-border-top-big',
         firstCellIsHeader: true,
         head: [
           {
-            html: 'Draft ID'
+            html: 'Temporary ID'
           },
           {
-            html: 'Appeal type'
+            html: 'Appeal type',
+            classes: 'govuk-!-width-one-half'
           },
           {
             html: 'Deadline'
-          },
-          {
-            html: 'Last updated'
           },
           {
             html: '<span class="govuk-visually-hidden">Action</span>',
@@ -49,55 +47,46 @@
         rows: [
           [
             {
-              html: 'DRAFT-'+(ref+12)
+              html: 'TEMP-'+(ref+12)
             },
             {
-              html: 'Planning application'
+              html: 'Planning application: Householder planning'
             },
             {
-              html: '3' | daysInFuture
+              html: '20' | daysInFutureShort
             },
             {
-              html: '3' | daysInPast
-            },
-            {
-              html: '<a href="/manage/questionnaire/v11/task-list">Continue</a>',
+              html: '<a href="#0">Continue</a>',
               format: 'numeric'
             }
           ],
           [
             {
-              html: 'DRAFT-'+(ref+34)
+              html: 'TEMP-'+(ref+56)
             },
             {
               html: 'Enforcement notice'
             },
             {
-              html: 'Not applicable'
+              html: '27' | daysInFutureShort
             },
             {
-              html: '6' | daysInPast
-            },
-            {
-              html: '<a href="/manage/questionnaire/v11/task-list">Continue</a>',
+              html: '<a href="#0">Continue</a>',
               format: 'numeric'
             }
           ],
           [
             {
-              html: 'DRAFT-'+(ref+56)
+              html: 'TEMP-'+(ref+34)
             },
             {
-              html: 'Planning application'
+              html: 'Lawful development certificate: Section 26H'
             },
             {
-              html: '7' | daysInFuture
+              html: 'Not applicable'
             },
             {
-              html: '7' | daysInPast
-            },
-            {
-              html: '<a href="/manage/questionnaire/v11/task-list">Continue</a>',
+              html: '<a href="#0">Continue</a>',
               format: 'numeric'
             }
           ]
@@ -110,7 +99,7 @@
       {% set ref = 1234567 %}
       {{ govukTable({
         classes: 'govuk-!-margin-top-9',
-        caption: 'Appeals that need your attention',
+        caption: 'Validated appeals to complete',
         captionClasses: 'govuk-table__caption--m',
         firstCellIsHeader: true,
         head: [
@@ -118,7 +107,8 @@
             html: 'Appeal reference'
           },
           {
-            html: 'Appeal type'
+            html: 'Appeal type',
+            classes: 'govuk-!-width-one-half'
           },
           {
             html: 'Deadline'
@@ -134,13 +124,13 @@
               html: ref+12345
             },
             {
-              html: 'Planning application'
+              html: 'Planning application: Listed building consent'
             },
             {
-              html: '3' | daysInFuture
+              html: '7' | daysInFutureShort
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list">Add final comments</a>',
+              html: '<a href="#0">Add final comments</a>',
               format: 'numeric'
             }
           ],
@@ -149,13 +139,13 @@
               html: ref+23456
             },
             {
-              html: 'Enforcement notice'
+              html: 'Planning application: Full planning'
             },
             {
-              html: '6' | daysInPast
+              html: '16' | daysInFutureShort
             },
             {
-              html: '<a href="/manage/questionnaire/v11/task-list">Provide statement</a>',
+              html: '<a href="#0">Provide statement</a>',
               format: 'numeric'
             }
           ]
