Final copy tweaks ready for team review

--- a/app/views/appeal/save-and-return/index.html
+++ b/app/views/appeal/save-and-return/index.html
@@ -26,7 +26,7 @@
       Version {{version}}
       {{ govukTag({
         classes: 'govuk-tag--yellow govuk-!-margin-left-2',
-        text: 'In progress'
+        text: 'Ready for review'
       }) }}
     </h2>
 
