--- a/app/views/appeal/save-and-return/v5/enter-code.html
+++ b/app/views/appeal/save-and-return/v5/enter-code.html
@@ -36,7 +36,7 @@
     value: data['code'],
     classes: 'govuk-input--width-5',
     label: {
-      html: 'Enter the 5 digit security code',
+      html: 'What&rsquo;s the 5 digit security code?',
       classes: 'govuk-label--m'
     }
   }) }}
