--- a/app/views/appeal/save-and-return/v5/your-appeals.html
+++ b/app/views/appeal/save-and-return/v5/your-appeals.html
@@ -25,7 +25,7 @@
       </style>
       {{ govukTable({
         classes: 'govuk-!-margin-top-3',
-        caption: 'New appeals',
+        caption: 'Unsubmitted appeals',
         captionClasses: 'govuk-table__caption--m govuk-!-padding-top-6 app-border-top-big',
         firstCellIsHeader: true,
         head: [
@@ -99,7 +99,7 @@
       {% set ref = 1234567 %}
       {{ govukTable({
         classes: 'govuk-!-margin-top-9',
-        caption: 'Validated appeals to complete',
+        caption: 'Appeals to action',
         captionClasses: 'govuk-table__caption--m',
         firstCellIsHeader: true,
         head: [
