--- a/app/views/appeal/save-and-return/v5/email--saved.html
+++ b/app/views/appeal/save-and-return/v5/email--saved.html
@@ -19,7 +19,7 @@
   <p>You have until {{ 20 | daysInFuture }} to submit your appeal.</p>
 
   <p>
-    To continue with your appeal, follow the link to get a code:
+    To continue with your appeal, follow the link:
     <br>
     <a href="enter-code">https://appeal-planning-decision.service.gov.uk/full-appeal/submit-appeal/enter-code/9c05c1c6-ab45-4fc3-a1e4-5b38f749a39e</a>
   </p>
