Updated index with list of proposed changes

--- a/app/views/appeal/save-and-return/index.html
+++ b/app/views/appeal/save-and-return/index.html
@@ -32,7 +32,36 @@
 
     <p>Improvements to the feature that was developed and released, some functionality was missing or didn&rsquo;t work as intended and some changes to try and improve the process.</p>
 
-    <p><a href="https://miro.com/app/board/uXjVPD6q8IM=/?share_link_id=504329325803">Review of what is in live on Miro</a>.</p>
+    {{ govukInsetText({
+      html: '<p><a href="https://miro.com/app/board/uXjVPD6q8IM=/?share_link_id=504329325803">Design Miro board</a> with notes from review of live and suggestions to changes.</p>'
+    }) }}
+
+    <p class="govuk-!-margin-bottom-2">List of proposed changes:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>refactor save and return so it isn't reliant on browser storage, allowing the user to move between devices</li>
+      <li>build the missing multiple appeals dashboard</li>
+      <li>add a route in from before you start to return to your appeals</li>
+      <li>
+        change email confirmation journey to also use a security code rather than a link in the email
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+          <li>change resend function</li>
+          <li>remove confirmed page</li>
+        </ul>
+      </li>
+      <li>remove save button on question pages and add link to return to task list</li>
+      <li>
+        move save button on task list to top (also change to link)
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+          <li>would be nice to refactor the HAS and Full task lists too…</li>
+        </ul>
+      </li>
+      <li>
+        copy and UI changes throughout
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+          <li>error message review</li>
+        </ul>
+      </li>
+    </ul>
 
     {{ govukButton({
       html: 'View prototype',
@@ -43,6 +72,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li><a href="v{{version}}/email--saved">Email: Your appeal has been saved</a></li>
       <li><a href="v{{version}}/email--code">Email: Your security code</a></li>
+      <li><a href="v{{version}}/your-appeals">Your appeals</a></li>
     </ul>
 
   </div>
