--- a/app/views/appeal/save-and-return/v5/your-appeals.html
+++ b/app/views/appeal/save-and-return/v5/your-appeals.html
@@ -12,7 +12,7 @@
       </h1>
 
       <p>
-        Continue with your current appeals, or <a href="#0" class="govuk-link--no-visited-state">start a new appeal</a>.
+        Manage your appeals or <a href="#0" class="govuk-link--no-visited-state">start a new appeal</a>.
       </p>
     </div>
 
