--- a/app/views/_layouts/layout-main.html
+++ b/app/views/_layouts/layout-main.html
@@ -9,11 +9,8 @@
 {# Add the phase banner and back link to each page #}
 {% block beforeContent %}
 	{{ govukPhaseBanner({
-		tag: {
-			text: 'Prototype',
-			classes: 'govuk-tag--pink'
-		},
-		html: 'This is not a real service, it is only for testing ideas.'
+		tag: { text: 'Beta' },
+		html: 'This is a new service – your <a class="govuk-link--no-visited-state" href="#feedback">feedback</a> will help us to improve it.'
 	}) }}
 
 	{# Add a back link block to just override that and not the phase banner #}
