Interested party update, v6 for comment on appeal

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -114,12 +114,27 @@
         Interested parties
       </h2>
 
-      <!-- <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
         Find an appeal
-      </h3> -->
+      </h3>
+
+      <p class="govuk-body">
+        Design work in progress from May 2022
+      </p>
+
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="appeal/find-appeal/">Find and comment on an appeal (design work in progress from May 2022)</a>
+          <a href="interested/find-appeal/v5/guidance">Find an appeal</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Comment on an appeal
+      </h3>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="interested/comment/v6/your-name">Comment on an appeal</a>
         </li>
       </ul>
 
