Added no appeals

--- a/app/views/appeal/save-and-return/index.html
+++ b/app/views/appeal/save-and-return/index.html
@@ -73,6 +73,7 @@
       <li><a href="v{{version}}/email--saved">Email: Your appeal has been saved</a></li>
       <li><a href="v{{version}}/email--code">Email: Your security code</a></li>
       <li><a href="v{{version}}/appeal-unavailable">Appeal unavailable</a></li>
+      <li><a href="v{{version}}/no-appeals">No appeals</a></li>
       <li><a href="v{{version}}/your-appeals">Your appeals</a></li>
     </ul>
 
