Quick fix to find appeal for IPs

--- a/app/views/interested/find-appeal/v5/appeal-details.html
+++ b/app/views/interested/find-appeal/v5/appeal-details.html
@@ -194,7 +194,7 @@
         {{ govukButton({
           text: "Comment on this appeal",
           classes: "govuk-!-margin-bottom-9",
-          href: "appeal-comment-name?checking="
+          href: "/interested/comment/v6/your-name?checking="
         }) }}
 
       {% endif %}
