--- a/app/views/appeal/save-and-return/v5/appeal-unavailable.html
+++ b/app/views/appeal/save-and-return/v5/appeal-unavailable.html
@@ -8,7 +8,7 @@
     {{title}}
   </h1>
 
-  <p>The appeal you are trying to access is not available, it might have been submitted or the deadline to appeal might have passed.</p>
+  <p>The appeal you are trying to access is not available. It might have been submitted or the deadline to appeal might have passed. If it has been submitted, we will contact you about the next steps.</p>
 
   <p><a href="#0" class="govuk-link--no-visited-state">Start a new appeal</a></p>
 {% endblock %}
