--- a/app/views/appeal/save-and-return/v5/no-appeals.html
+++ b/app/views/appeal/save-and-return/v5/no-appeals.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'You have no appeals' %}
+{% set title = 'No appeals to action' %}
 {% set back = false %}
 
 {% block questions %}
@@ -8,7 +8,7 @@
     {{title}}
   </h1>
 
-  <p>You do not have any unsubmitted appeals or appeals to action.</p>
+  <p>You do not have any appeals to submit or action.</p>
 
   <p><a href="#0" class="govuk-link--no-visited-state">Start a new appeal</a></p>
 {% endblock %}
